tests/snapshots/code_text_fallback_param__code_text_fallback_sample_js_detailed_json.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 113
expression: out_json
---
[
  [ /* 2 more items */ ],
  /* 5 more items */
  [ /* 2 more items */ ]
  /* 11 more items */
]
