tests/snapshots/code_text_fallback_param__code_text_fallback_sample_js_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: function greet(name) {
 2:   console.log(`Hello, ${name}`);
 3: }
 4: 
27: 
28: main();
29:
