tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 77
expression: out
---
def greet(name: str):
    print(f"Hello, {name}")

…

…
if __name__ == "__main__":
    main()
…
