tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: def greet(name: str):
 2:     print(f"Hello, {name}")
 3: 
 4: 
22: 
23: if __name__ == "__main__":
24:     main()

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 4,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 119,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "def greet(name: str):",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    print(f\"Hello, {name}\")",
                "id": 0,
                "index_in_parent_array": 1,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 1
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 2
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 3,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 3
      },
      {
        "id": 0,
        "index_in_parent_array": 7,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 21,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 8,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 21
      },
      {
        "children": [
          {
            "atomic_token": "if __name__ == \"__main__\":",
            "id": 0,
            "index_in_parent_array": 22,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    main()",
                "id": 0,
                "index_in_parent_array": 23,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 23,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 23
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 22
      }
    ],
    "gaps": [
      {
        "before_child_index": 3,
        "omitted_count": 4
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 16
  },
  "template": "code"
}
