tests/snapshots/code_text_fallback_param__code_text_fallback_sample_py_default.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
def greet(name: str):
    print(f"Hello, {name}")

…
…

…
…
if __name__ == "__main__":
    main()
…
